--- a/_data/language.yml
+++ b/_data/language.yml
@@ -1,10 +1,10 @@
 link.timtok---
-# Languages
+# Indonesia
 
-en:
+en:https://vt.tiktok.com/ZSDB17G8d/
   name_english: "English"
   name_native: "English"
 
-cn:
-  name_english: "Chinese"
-  name_native: "中文"
+cn:Amanah Jubek
+  name_english: https://vt.tiktok.com/ZSDBJrT7k/
+  name_native: Amanah Jubek
