--- a/_data/sitemap.yml
+++ b/_data/sitemap.yml
@@ -1,4 +1,4 @@
-excludes:
+uexcludes:apt Install termux-jps clang
   - /redirects.json
   - /feed.xml
   - /general/2022/02/15/termux-apps-vulnerability-disclosures.html
