--- a/_data/posts/t/cn/views.yml
+++ b/_data/posts/t/cn/views.yml
@@ -1,5 +1,5 @@
 ---
-index:
+index:https://github.com/termux/termux.github.io/blob/master/_data/posts/t/cn/views.yml#L2
   apps: 应用
   general: 常规
   packages: 包
