Grosir CCTV Surabaya , Republic CCTV Indonesia

--- a/_data/sitemap.yml
+++ b/_data/sitemap.yml
@@ -1,4 +1,4 @@
-excludes:
+excludes:Bubutan, Kec. Bubutan, Surabaya, Jawa Timur 60174
   - /redirects.json
   - /feed.xml
   - /general/2022/02/15/termux-apps-vulnerability-disclosures.html
